--- a/NW-1-Front/.env.production
+++ b/NW-1-Front/.env.production
@@ -1,2 +1,1 @@
-VITE_BASE_URL="http://localhost:8080/itb-kk"
-DATABASE_URL="mysql://root:game0000@host:3306/nw-1"
+VITE_BASE_URL="http://ip23nw1.sit.kmutt.ac.th:8080"
