--- a/NW-1-Front/package.json
+++ b/NW-1-Front/package.json
@@ -11,8 +11,8 @@
     "test:unit": "vitest",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:e2e": "start-server-and-test preview http://ip23nw1.sit.kmutt.ac.th:3000 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 3000' http://ip23nw1.sit.kmutt.ac.th:3000 'cypress open'"
+    "test:e2e": "start-server-and-test preview http://localhost:5173 'cypress run --e2e'",
+    "test:e2e:dev": "start-server-and-test 'vite dev --port 5173' http://localhost:5173 'cypress open'"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
